--- a/styles.css
+++ b/styles.css
@@ -128,9 +128,11 @@ body {
 }
 
 .banner img {
-    width: 100%;
-    transform: translateY(-410px);
     filter: brightness(30%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center 88%;
 }
 
 .banner h1 {
