--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ h1 {
 
 .container {
     width: 100%;
-    min-height: 100vh;
+    min-height: 92vh;
+    flex: 1;
 }
 
 .nav {
@@ -81,7 +82,6 @@ h1 {
 
 .nav-content {
     margin-left: 256px;
-    height: 100vh;
     background-color: var(--azul-hover);
 }
 
@@ -153,13 +153,8 @@ footer {
     text-align: center;
     padding: 5px 0px 20px;
     color: var(--cinza);
-}
-
-.name {
-    margin-top: 15px;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Be Vietnam Pro', sans-serif;
+    width: 100%;
+    padding-left: 256px;
 }
 
 @media screen and (max-width: 1225px) {
@@ -238,6 +233,10 @@ footer {
 
     hr {
         width: calc(100% - 60px);
+    }
+
+    footer {
+        padding-left: 0px;
     }
 }
 
